# adaptive-chess-club

./: .env.example  .gitattributes  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  entrypoint.sh  pyproject.toml  pytest.ini
alembic/: env.py
alembic/versions/: 0001_initial_baseline.py  0002_phase_3a.py  0003_phase_3c.py  0004_resigned_status.py  0005_player_elo.py  0006_viktor_rename.py  0007_auth_credentials.py  0008_match_is_private.py  0009_lobbies_and_pvp.py  0010_chat_sessions.py  0011_lobby_time_control.py  0012_character_evolution_state.py  0013_pvp_clocks.py  0014_mature_default_rating.py  0015_feedback.py  0016_player_agents.py  0017_agent_match_kind.py  0018_memory_agent_id.py  0019_clay_economy.py
app/: auth.py  config.py  db.py  logging_config.py  mail.py  main.py  redis_client.py
app/agents/: __init__.py  personality_sanitizer.py  prompts.py  retrieval.py  soul.py  subconscious.py
app/api/: characters.py  discovery.py  matches.py  players.py
app/characters/: chat_service.py  content_rating_prompts.py  memory_generator.py  openings.py  presets.py  rooms.py  seed.py  style.py
app/concurrency/: locks.py
app/director/: __init__.py  director.py  elo.py  mood.py
app/discovery/: __init__.py  hall_of_fame.py  leaderboard.py  queries.py
app/economy/: __init__.py  clay_ledger.py
app/engine/: __init__.py  base.py  board_abstraction.py  diversity_guard.py  maia2_engine.py  mock_engine.py  registry.py  stockfish_engine.py
app/llm/: __init__.py  call_log.py  client.py
app/lobbies/: codes.py  matchmaking.py  pvp_service.py  service.py
app/matches/: agent_streaming.py  housekeeping.py  service.py  streaming.py
app/memory/: crud.py  embeddings.py  inline_save.py  vector_store.py
app/models/: __init__.py  auth.py  character.py  chat.py  clay_balance.py  clay_transaction.py  evolution.py  feedback.py  lobby.py  match.py  memory.py  player_agent.py
app/post_match/: __init__.py  analysis.py  elo_apply.py  evolution.py  features.py  memory_gen.py  processor.py
app/schemas/: __init__.py  agents.py  character.py  discovery.py  match.py  memory.py
app/sockets/: __init__.py  bridge.py  disconnect.py  events.py  lobby_server.py  processor_callback.py  room_server.py  server.py
app/web/: feedback_routes.py  lobby_routes.py  routes.py
app/web/templates/: _summary_body.html  admin_feedback.html  admin_users.html  agent_detail.html  agent_new.html  agent_room.html  agents_list.html  base.html  clay_history.html  detail.html  discovery.html  edit.html  feedback.html  forgot_password.html  index.html  landing.html  leaderboard_characters.html  leaderboard_players.html  lobbies.html  lobby.html  lobby_join.html  lobby_new.html  login.html  new.html  (+10 more)
docs/: design_system.md  phase_3b_manual_smoke.md  phase_4_evolution.md
scripts/: backfill_embeddings.py  grant_starting_clay.py  live_match_demo.py  migrate.py  refresh_preset_openings.py  setup_engines.py  smoke_3a.py  verify_live_play.py
tests/: conftest.py  test_agent_integration.py  test_block12_agents.py  test_block13_agent_match.py  test_block14_agent_match_fixes.py  test_block15_agent_match_quality.py  test_block17_clay_economy.py  test_block3_concurrency.py  test_board_abstraction.py  test_director.py  test_diversity_guard.py  test_elo_ratchet.py  test_embedding_canary.py  test_housekeeping.py  test_inline_memory.py  test_live_llm.py  test_live_match.py  test_match_service.py  test_memory_generator.py  test_memory_schema.py  test_mood.py  test_opening_classifier.py  test_phase_3a_content_rating.py  test_phase_3a_login.py  test_phase_3a_migration.py  test_phase_3a_ownership.py  test_phase_3c_discovery.py  test_phase_3c_spectators.py  test_phase_4_0a_auth.py  test_phase_4_0b_elo_fairness.py  test_phase_4_0c_mock_shuffle.py  test_phase_4_1_rooms.py  test_phase_4_2_5_chat.py  test_phase_4_2_5_zero_button.py  test_phase_4_2_integration.py  test_phase_4_2_lobby_service.py  test_phase_4_2_matchmaking.py  test_phase_4_2_pvp.py  test_phase_4_3_evolution.py  test_phase_4_4_clocks.py  (+12 more)
(+10 files in other folders)
